# learn_deeplearning

./: .gitignore  README.md  main.py  pyprojcet_toml.md  pyproject.toml
Record/: (blog_양식).md  00_To-do_List.md  01_프로젝트_분석_및_계획.md  02_Project_Summary.md  20250909.md  90_발표내용.md  91_발표목차.md  convet_to_md.ipynb
Record_Blog/: 20250909.ipynb
[Book]Deep_Learning_from_Scratch/chapter_01/: 01_헬로_파이썬.ipynb
[Book]Deep_Learning_from_Scratch/chapter_02/: 02_퍼셉트론.ipynb
[Book]Deep_Learning_from_Scratch/chapter_03/: 03_신경망.ipynb  03_신경망1.ipynb  03_신경망2.ipynb  03_신경망3.ipynb  03_신경망3_MNIST.ipynb
[Book]Deep_Learning_from_Scratch/chapter_04/: 04_신경망_학습.ipynb
backend/: main.py  model.py  render.yaml  requirements-light.txt  requirements.txt
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
human-accident/: 03_data_preprocessing.ipynb  06_(원본)커스텀 데이터셋 제작.ipynb  07_what_dataset_dataloader.ipynb  08_Dataset&DataLoader.ipynb  09_커스텀 데이터셋 제작.ipynb  10_(원본)커스텀 데이터셋 제작.ipynb  13_커스텀 데이터셋 제작.ipynb  20_my_custum_dataset.ipynb  20_my_custum_dataset_study.ipynb  20_적용하기.ipynb  21_my_custum_dataset.ipynb  30_model.ipynb  30_model_training.ipynb  To-do_List.md  customdata.py  dataloader(사용안함).py  dataloader.py  커스텀 데이터셋 제작.ipynb
human-accident-bump/: 01_data(실패).ipynb  02_data_and_label.ipynb  02_date.ipynb
human-accident/cnn-lstm/: customdata(사용안함).py  dataloader.py  dataset.py  main.py  model.py  opts.py  train_valid_dataset.py
human-accident/cnn-lstm/datasets/: ucf101.py
human-accident/data/: human-accident_bump_rgb_0001_cctv1_01.json  용량큰데이터셋파악.md
safety_demo/: 00_demo.md  README.md  app.py  cnnlstm_model.py  config.py  requirements.txt  run_demo.bat
safety_demo/sample_videos/: README.md
(+1 files in other folders)
