[project]
name = "learn-deeplearning"
version = "0.1.0"
description = "Deep learning project with PyTorch and CUDA"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "torch",
    "torchvision",
    "torchaudio",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# macOS용 MPS 인덱스 추가 (사실상 이것은 cpu와 동일함. 사실 없어도 됨.)
[[tool.uv.index]]
name = "pytorch-mps"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.uv.sources]
torch = [
    # Windows/Linux → CUDA 12.8 wheel 인덱스
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' and platform_machine == 'AMD64'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    # macOS → CPU wheel (MPS 지원 포함)
    { index = "pytorch-mps", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    # torchvision도 torch와 동일한 인덱스를 사용하도록 설정
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' and platform_machine == 'AMD64'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-mps", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
    # torchaudio도 torch와 동일한 인덱스를 사용하도록 설정
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' and platform_machine == 'AMD64'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-mps", marker = "sys_platform == 'darwin'" },
]


